incorporate deaths, improve checking

--- a/inst/htmlwidgets/lib/rtVis-1.0/styles.css
+++ b/inst/htmlwidgets/lib/rtVis-1.0/styles.css
@@ -14,7 +14,6 @@
 }
 
 .dropdown-container {
-  position: absolute;
   width: 200px;
   height: 40px;
 }
@@ -88,8 +87,25 @@
   width: 50%;
   height: 20px;
   display: flex;
-  padding-left: 30px
+  padding-left: 30px;
+  justify-content: space-between;
 }
+
+.legend-e {
+  display: flex;
+  align-items: center;
+}
+
+.legend-eb {
+  display: flex;
+  align-items: center;
+}
+
+.legend-f {
+  display: flex;
+  align-items: center;
+}
+
 
 .ts-legend-text {
   padding-left: 10px;
@@ -98,17 +114,14 @@
 
 .ts-legend-e {
   background-color: #6fc2a9;
-  transform: translate(0%, 30%);
 }
 
 .ts-legend-eb {
   background-color: #e79a60;
-  transform: translate(0%, 30%);
 }
 
 .ts-legend-f {
   background-color: #a8a5d0;
-  transform: translate(0%, 30%);
 }
 
 .controls-container-time {
@@ -154,6 +167,54 @@
   padding-top: 1px;
   font-weight: bold;
   font-size: 15px;
+}
+
+.onoffswitch {
+    position: absolute; width: 90px; left: calc(100% - 120px);
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "Cases";
+    padding-left: 10px;
+    background-color: #FFFFFF; color: #000000;
+}
+.onoffswitch-inner:after {
+    content: "Deaths";
+    padding-right: 10px;
+    background-color: #FFFFFF; color: #000000;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 0;
+    right: 56px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px;
 }
 ;.phony {}
 ;.phony {}
